--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  # Biblioteca para trabalhar com banco de dados SQLite no Flutter.
+  sqflite: ^2.4.2
+  # Biblioteca para trabalhar com paths de arquivos.
+  path: ^1.9.1
+  # Biblioteca para trabalhar com logs.
+  logging: ^1.2.0
 
 dev_dependencies:
   flutter_test:
